[gd_scene load_steps=2 format=3 uid="uid://cxqqpib6swlg"]

[ext_resource type="Script" path="res://scripts/health_display.gd" id="1_tunr8"]

[node name="HealthDisplay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tunr8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
columns = 20

[node name="DebugContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugContainer"]
layout_mode = 2

[node name="MaxHealth" type="HBoxContainer" parent="DebugContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugContainer/VBoxContainer/MaxHealth"]
layout_mode = 2
text = "Max Health"

[node name="MaxHealthField" type="SpinBox" parent="DebugContainer/VBoxContainer/MaxHealth"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 1.0
max_value = 999.0
value = 1.0

[node name="HealthPerHeart" type="HBoxContainer" parent="DebugContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugContainer/VBoxContainer/HealthPerHeart"]
layout_mode = 2
text = "Health per heart"

[node name="HealthPerHeartField" type="SpinBox" parent="DebugContainer/VBoxContainer/HealthPerHeart"]
layout_mode = 2
min_value = 1.0
max_value = 999.0
value = 1.0

[node name="CurrentHealth" type="HBoxContainer" parent="DebugContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugContainer/VBoxContainer/CurrentHealth"]
layout_mode = 2
text = "Current health"

[node name="CurrentHealthField" type="SpinBox" parent="DebugContainer/VBoxContainer/CurrentHealth"]
layout_mode = 2
size_flags_horizontal = 10
max_value = 999.0

[node name="HeartsPerRow" type="HBoxContainer" parent="DebugContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DebugContainer/VBoxContainer/HeartsPerRow"]
layout_mode = 2
text = "Hearts per row"

[node name="HeartsPerRowField" type="SpinBox" parent="DebugContainer/VBoxContainer/HeartsPerRow"]
layout_mode = 2
size_flags_horizontal = 10
min_value = 3.0
max_value = 25.0
value = 3.0

[node name="Button" type="Button" parent="DebugContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Update"

[connection signal="value_changed" from="DebugContainer/VBoxContainer/MaxHealth/MaxHealthField" to="." method="_on_max_health_field_value_changed"]
[connection signal="value_changed" from="DebugContainer/VBoxContainer/HealthPerHeart/HealthPerHeartField" to="." method="_on_health_per_heart_field_value_changed"]
[connection signal="value_changed" from="DebugContainer/VBoxContainer/CurrentHealth/CurrentHealthField" to="." method="_on_current_health_field_value_changed"]
[connection signal="value_changed" from="DebugContainer/VBoxContainer/HeartsPerRow/HeartsPerRowField" to="." method="_on_hearts_per_row_field_value_changed"]
[connection signal="pressed" from="DebugContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
